--- a/blogpost_jupyter'.ipynb
+++ b/blogpost_jupyter'.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "6447721c",
+   "execution_count": 31,
+   "id": "04b7da1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,26 +11,26 @@
     "import openai\n",
     "\n",
     "#set up gitpython library - allows us to do GIT calls from python code\n",
-    "from git import repo\n",
+    "from git import Repo\n",
     "from pathlib import Path #allows us to set up paths and set up directories"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "c20f40e0",
+   "execution_count": 32,
+   "id": "66e00b2f",
    "metadata": {},
    "outputs": [],
    "source": [
     "#set up api key - use later\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+    "# os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
     "openai.api_key = os.getenv('OPENAI_API_KEY')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "c6cd42ed",
+   "execution_count": 33,
+   "id": "04033f2d",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "'C:\\\\Users\\\\brian\\\\OneDrive\\\\Documents\\\\GitHub\\\\briannalytle.github.io'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,8 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "f67f8163",
+   "execution_count": 34,
+   "id": "e8263539",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,8 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "b4255da7",
+   "execution_count": 35,
+   "id": "e9d897d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2a353c6",
+   "id": "2ce50e6e",
    "metadata": {},
    "source": [
     "# Github Pages\n",
@@ -91,8 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "9758ded3",
+   "execution_count": 36,
+   "id": "098fd7ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,9 +109,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4e99303b",
+   "metadata": {},
+   "source": [
+    "** Feeding it random text to test update**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "6382ccdd",
+   "execution_count": 37,
+   "id": "37cddbe6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,13 +128,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "06be607b",
+   "execution_count": 38,
+   "id": "eca24f20",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with ope"
+    "#'w' means we are writing to it\n",
+    "with open(PATH_TO_BLOG/\"index.html\", \"w\") as f:\n",
+    "    f.write(random_text_string)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "58c99928",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "update_blog()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14d26a88",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
