--- a/blogpost_jupyter'.ipynb
+++ b/blogpost_jupyter'.ipynb
@@ -2,35 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "04b7da1d",
+   "execution_count": 60,
+   "id": "c3e01c6c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import openai\n",
+    "import random\n",
+    "import string\n",
     "\n",
     "#set up gitpython library - allows us to do GIT calls from python code\n",
     "from git import Repo\n",
-    "from pathlib import Path #allows us to set up paths and set up directories"
+    "from pathlib import Path #allows us to set up paths and set up directories\n",
+    "\n",
+    "import shutil\n",
+    "\n",
+    "from bs4 import BeautifulSoup\n",
+    "from PIL import Image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "66e00b2f",
+   "execution_count": 40,
+   "id": "ad880579",
    "metadata": {},
    "outputs": [],
    "source": [
     "#set up api key - use later\n",
-    "# os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
-    "openai.api_key = os.getenv('OPENAI_API_KEY')"
+    "# openai.api_key = os.getenv('OPENAI_API_KEY')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "04033f2d",
+   "execution_count": 41,
+   "id": "848507ba",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +45,7 @@
        "'C:\\\\Users\\\\brian\\\\OneDrive\\\\Documents\\\\GitHub\\\\briannalytle.github.io'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,8 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "e8263539",
+   "execution_count": 42,
+   "id": "23407562",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,8 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "e9d897d2",
+   "execution_count": 43,
+   "id": "c4221495",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ce50e6e",
+   "id": "a6621d97",
    "metadata": {},
    "source": [
     "# Github Pages\n",
@@ -91,8 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "098fd7ee",
+   "execution_count": 44,
+   "id": "a7af94ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e99303b",
+   "id": "90c419cf",
    "metadata": {},
    "source": [
     "** Feeding it random text to test update**"
@@ -118,8 +124,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "37cddbe6",
+   "execution_count": 45,
+   "id": "7a212d1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,8 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "eca24f20",
+   "execution_count": 46,
+   "id": "2d4642b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,8 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "58c99928",
+   "execution_count": 47,
+   "id": "e5f0931e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,9 +155,208 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fbca4c98",
+   "metadata": {},
+   "source": [
+    "Problem: We always overwrite the starting page!\n",
+    "It would be much better to create a new html file and create a link to this file on the homepage. \n",
+    "Ideally, the routine would automatically assign a file name and make sure that nothing is overwritten!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb027ee7",
+   "metadata": {},
+   "source": [
+    "# pt.2 -\n",
+    "- FUNCTIONS to auto create html page template with placeholders for text and iamges\n",
+    "- use text and images form our api calls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "153823c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_new_blog(title, content, cover_image=Path(\"../PT Centered Purple.png\")):\n",
+    "    \n",
+    "    cover_image = Path(cover_image)\n",
+    "    \n",
+    "    files =len(list(PATH_TO_CONTENT.glob(\"*.html\")))\n",
+    "    new_title = f\"{files+1}.html\"\n",
+    "    path_to_new_content = PATH_TO_CONTENT/new_title\n",
+    "    \n",
+    "    shutil.copy(cover_image, PATH_TO_CONTENT)\n",
+    "    if not os.path.exists(path_to_new_content):\n",
+    "        with open(path_to_new_content, \"w\") as f:\n",
+    "            f.write(\"<!DOCTYPE html>\\n\")\n",
+    "            f.write(\"<html>\\n\")\n",
+    "            f.write(\"<head>\\n\")\n",
+    "            f.write(f\"<title> {title} </title>\\n\")\n",
+    "            f.write(\"</head>\\n\")\n",
+    "            \n",
+    "            f.write(\"<body>\\n\")\n",
+    "            f.write(f\"<img src='{cover_image.name}' alt='Cover Image'> <br />\\n\")\n",
+    "            f.write(f\"<h1> {title} </h1>\")\n",
+    "            f.write(content.replace(\"\\n\", \"<br />\\n\"))\n",
+    "            f.write(\"</body>\\n\")\n",
+    "            f.write(\"</html>\\n\")\n",
+    "            print(\"Blog created\")\n",
+    "            return path_to_new_content\n",
+    "    else:\n",
+    "        raise FileExistsError(\"File already exist! Abort\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "ab6ff9ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blog created\n"
+     ]
+    }
+   ],
+   "source": [
+    "path_to_new_contet = create_new_blog('Test_title',\n",
+    "                                    'aeuwthrawef', 'apples.jpg')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e3bbfb5",
+   "metadata": {},
+   "source": [
+    "we want an indexed page that has a lsit of all blog posts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "23646e56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<html lang=\"en\">\\n<head>\\n<meta charset=\"utf-8\"/>\\n<meta content=\"IE=edge\" http-equiv=\"X-UA-Compatible\"/>\\n<meta content=\"width=device-width, initial-scale=1.0\" name=\"viewport\"/>\\n<title>Document</title>\\n</head>\\n<body>\\n<h1>My BLOG Home Page</h1>\\n<a href=\"index.html\">Home</a>\\n</body>\\n</html>'"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open(PATH_TO_BLOG/\"index.html\") as index:\n",
+    "    soup = BeautifulSoup(index.read())\n",
+    "str(soup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "bdcf8299",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#checkign duplicate links\n",
+    "\n",
+    "#write blog post  link to index.html file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "0199505c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_for_duplicate_links(path_to_new_content, links):\n",
+    "    urls = [str(link.get(\"href\")) for link in links]\n",
+    "    content_path = str(Path(*path_to_new_content.parts[-2:]))\n",
+    "    return content_path in urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "87b2b710",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<a href=\"index.html\">Home</a>]"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find_all('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "9525c013",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_to_index(path_to_new_content):\n",
+    "    with open(PATH_TO_BLOG/\"index.html\") as index:\n",
+    "        soup = BeautifulSoup(index.read())\n",
+    "        \n",
+    "    links = soup.find_all('a')\n",
+    "    last_link = links[-1]\n",
+    "    \n",
+    "    if check_for_duplicate_links(path_to_new_content, links):\n",
+    "        raise ValueError('Link does already exist!')\n",
+    "        \n",
+    "    link_to_new_blog = BeautifulSoup.new_tag('a', href = Path(*path_to_new_content.parts[-2:]))\n",
+    "    link_to_new_blog.string = path_to_new_content.name.split('.')[0]\n",
+    "    last_link.insert_after(link_to_new_blog)\n",
+    "    \n",
+    "    with open(PATH_TO_BLOG/'index.html', 'w') as f:\n",
+    "        f.write(str(BeautifulSoup.prettify(formatter = 'html')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "8fe64338",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'path_to_new_content' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [77]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m write_to_index(\u001b[43mpath_to_new_content\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'path_to_new_content' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "write_to_index(path_to_new_content)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14d26a88",
+   "id": "6e205d7f",
    "metadata": {},
    "outputs": [],
    "source": []
